fixed table content alignment and table width

--- a/costumespropsset.css
+++ b/costumespropsset.css
@@ -41,6 +41,12 @@ body {
 	padding-right: 15px;
 }
 
+.col-xs-6b {
+	padding-left: 15px;
+	padding-right: 15px;
+	width: 100%;
+}
+
 .boxes {
 	padding-left: 5px;
 	padding-right: 5px;
